<resources>
    <string name="app_name">INSOPTAndroidPractice</string>

    <string name="btn_signup">SIGNUP</string>
    <string name="et_pw">비밀번호를 입력해주세요</string>
    <string name="btn_login">login</string>
    <string name="tv_pw">비밀번호</string>
    <string name="et_id">아이디를 입력해주세요</string>
    <string name="tv_id">ID</string>
    <string name="login_title">Welcome to SOPT</string>
    <string name="mypage_name">이름 : 서동주</string>
    <string name="mypage_mbti">MBTI : CUTE</string>
    <string name="signup_title">SIGNUP</string>
    <string name="et_mbti">MBTI를 입력해주세요</string>
    <string name="tv_mbti">MBTI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>